# PolymarketBot

./: .env.example  .gitignore  CLAUDE.md  DRYRUN.md  README.md  RUN.md  RUNBOOK.md  bot.py  config.py  executor.py  market_data.py  markov.py  model.py  pyproject.toml  requirements.txt  stats.py  test_trade.py  verify_model.py
.claude/: settings.json  settings.local.json
.planning/: HANDOFF.json
betbot/: __init__.py  main.py
betbot/clients/: coinbase_ws.py  polymarket_ws.py
betbot/execution/: orders.py
betbot/infra/: config.py  refitter.py
betbot/kalshi/: __init__.py  auth.py  binance_feed.py  book.py  coinbase_feed.py  config.py  features.py  kalshi_rest_feed.py  kalshi_ws_feed.py  model.py  orders.py  scheduler.py  spot_feed.py  tick_logger.py  training_buffer.py
betbot/models/: features.py  fees.py  regression.py
betbot/research/: parameter_sweep.py
betbot/state/: poly_book.py
betbot/strategy/: decision.py
data/first_run/: ticks_BTC.csv
data/second_run/: decisions.jsonl  ticks.csv
model_fits/first_run_BTC_20260507_014854/: model.json  model.pkl
polybot/: main.py
polybot/cli/: polybot_ctl.py  polybot_metrics.py
scripts/: analyze_run.py  approve_allowances.py  backtest.py  check_balance.py  check_kalshi_balance.py  compare_models.py  demo_binance.py  demo_coinbase.py  demo_kalshi_ws.py  demo_polymarket_ws.py  demo_rtds.py  derive_creds.py  live_plot.py  merge_runs.py  replay_window.py  run_kalshi_bot.py  test_all.py  test_full_cycle.py  test_maker_trade.py  test_trade.py  test_trade_buy.py  test_trade_sell.py  train_model.py  tune.py  tune_trading_knobs.py  visualize_market.py  watch_decisions.py  window_replay.py
(+36 files in other folders)
