[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polybot"
version = "0.2.0"
description = "Polymarket 5-minute crypto lag-arbitrage bot"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "py-clob-client>=0.16.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "websockets>=12.0",
  "numpy>=1.24.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.3.0",
  "pyarrow>=15.0.0",
  "duckdb>=0.10.0",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
polybot          = "polybot.main:cli_entry"
polybot-metrics  = "polybot.cli.polybot_metrics:main"
polybot-ctl      = "polybot.cli.polybot_ctl:main"

[tool.setuptools.packages.find]
include = ["polybot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["polybot/tests"]
