[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betbot"
version = "0.3.0"
description = "Kalshi 15-minute BTC lag-arbitrage bot"
requires-python = ">=3.11"

dependencies = [
  "aiohttp>=3.9.0",
  "websockets>=12.0",
  "cryptography>=42.0.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.3.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
include = ["betbot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["betbot/tests"]
